--- a/client/uborrow/www/index.html
+++ b/client/uborrow/www/index.html
@@ -13,14 +13,15 @@
 
     <!-- angularjs scripts -->
     <script src="lib/js/ionic.js"></script>
-    <script src="lib/js/angular/angular.js"></script>
-    <script src="lib/js/angular/angular-animate.js"></script>
-    <script src="lib/js/angular/angular-sanitize.js"></script>
-    <script src="lib/js/angular-ui/angular-ui-router.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-animate.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-sanitize.js"></script>
+    <script src="//cdn.jsdelivr.net/angular.ui-router/0.2.8/angular-ui-router.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-resource.js"></script>
     <script src="lib/js/ionic-angular.js"></script>
 
-    <!-- cordova script -->
-    <script src="cordova.js"></script>
+    <!-- cordova script
+    <script src="lib/js/cordova.js"></script>
 
     <!-- your app's script -->
     <script src="js/app.js"></script>
